# practice_cpp

./: .gitignore  CMakeLists.txt  README.md  bench_centroid.cpp  notes.md
bench/: bench_centroid.cpp
examples/: demo.cpp
include/centroid/: centroid.hpp  cpu_features.hpp
src/: centroid_avx2.cpp  centroid_dispatch.cpp  centroid_scalar.cpp  cpu_features.cpp
tests/: test_centroid.cpp
